# webapp

./: .gitignore  Cargo.toml  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: jekyll-gh-pages.yml
assets/css/: styles.css
public/style/: common.module.scss
src/: main.rs  rust-ui.rs
src/app/: layout.tsx  not-found.tsx  page.module.css  page.tsx
src/app/component/: MusicPlayer.tsx  NotFound.tsx  i18n.tsx
src/app/guessit/: page.tsx
src/app/musiczone/: page.tsx
