[package]
name = "learn"
version = "0.1.0"
edition = "2021"
default-run = "rust_ui"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = {version="0.3.64",features=["Document","Node","Element"]}
yew = {version="0.20.0", features=["csr"]}
rand = {version="0.8.5"}
getrandom = { version = "0.2", features = ["js"] }

[[bin]]
name="rust_ui"
path="src/rust-ui.rs"
