[package]
default-run = "rust_ui"
edition = "2021"
name = "learn"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
rand = {version = "0.8.5"}
wasm-bindgen = "0.2.87"
web-sys = {version = "0.3.64", features = ["Document", "Node", "Element"]}
yew = {version = "0.21.0", features = ["csr"]}

[[bin]]
name = "rust_ui"
path = "src/main.rs"
